--- a/src/app/shared/table-view/table-view.component.html
+++ b/src/app/shared/table-view/table-view.component.html
@@ -1,5 +1,5 @@
 <div class="tw-m-24-px">
-  <div class="tw-mb-24-px tw-text-24-px"> Top {{ booksList.length }} book{{ booksList.length > 1 ? "s" : "" }} on {{ subjectName }}</div>
+  <div class="tw-mb-24-px tw-text-24-px"> {{topOrNext}} {{ booksList.length }} book{{ booksList.length > 1 ? "s" : "" }} on {{ subjectName }}</div>
 
   <ng-container>
     <table class="table-view">
